fixed  error of overflow in task lists while also fixing other errors while also adding the break-words in the JS part

--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@ body {
 header{
   background: linear-gradient(to bottom right,rgb(3, 25, 3) , rgb(138, 81, 81) );
 }
+
+.hello{
+  line-break: anywhere;
+}
